# Got

./: .gitignore  .gotMeta.json  .travis.yml  ArquitectureDiagram  DATABASE.sql  README.md  demo.cpp  demoInsertions.sql  structs.js  travis.sh
Client/: CMakeLists.txt  Client  Client.cpp  main  main.cpp
Client/Got/: .gotignore  miprueba.js
Client/src/: CMakeLists.txt  Client.cpp  Interface.cpp  Sync  Sync.cpp  a.out  main.cpp  output  prueba.cpp
Client/src/include/: Client.h  Client.hpp  Inteface.h  Interface.hpp  Sync.hpp  list.hpp  utilities.hpp
Server/src/: BinaryTree.js  Commit.js  DBHandler.js  DataBase.js  Huffman.js  Status.js  Sync.js  codes.json  compress.txt  index.js  package.json  processChanges.js  pruebas.REST  structs.js
tasks/: build.sh  buildEma.sh  buildJose.sh
